# rego-to-wasm

./: Cargo.toml  LICENSE.md  build.rs
src/: main.rs
src/policies/: example.rego
